<resources>
    <string name="app_name">AliBenAliDoctor</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="something">Check internet connection</string>
    <string name="password">Password</string>
    <string name="field_req">Field required</string>
    <string name="password_short">Password Short</string>
    <string name="pas_not_match">Password not match</string>
    <string name="change_language">Change language</string>
    <string name="next">Next</string>
    <string name="language_settings">Language Settings</string>
    <string name="map_key" />
    <string name="login">Log In</string>
    <string name="user_phone">Phone number</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_account"><![CDATA[I don\'t have account <font color="#FF575A">Sign Up</font>]]></string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="clinic_type">Clinic Type</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="specialization">Specialization</string>
    <string name="license">license</string>
    <string name="degree">Degree</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="email2">Email</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="ch_gender">choose Gender</string>
    <string name="ch_specialization">Choose Specialization</string>
    <string name="ch_license_image">Choose License Image</string>
    <string name="inv_email">Invaild Email</string>
    <string name="select_the_address">Select Address</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="enter_code_sent_to">Enter Code Sent To</string>
    <string name="resend">Resend</string>
    <string name="notifications">Notifications</string>
    <string name="ok">Ok</string>
    <string name="failed">Faild</string>
    <string name="register">Register</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="patients">Patients</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="about_app">About App</string>
    <string name="language">Language</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="detials">Detials</string>
    <string name="price2">Price</string>
    <string name="rates">Rates</string>
    <string name="search_for_patient">Search For Patient</string>
    <string name="detials2">Detials</string>
    <string name="additional_information">Additional Information</string>
    <string name="age">Age</string>
    <string name="chronic_diseases">Chronic Diseases</string>
    <string name="private_files">Private Files</string>
    <string name="call_now">Call Now</string>
    <string name="change_password">Change Password</string>
    <string name="incorrect_phone_pass">InCorrect Phone Password</string>
    <string name="wait">Wait</string>
    <string name="logout">Logout</string>
    <string name="reservtype">Reservision Type</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="lastdi">"Last detection date:</string>
    <string name="contact_us">Contact Us</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="suc">Done</string>
    <string name="add_report">Add Report</string>
    <string name="call_method">Call Method</string>
    <string name="start_chat">start call</string>
    <string name="call">call</string>
    <string name="end_reservation">انهاء الحجز</string>

    <string name="sar">SAR</string>
    <string name="from">From</string>
    <string name="visitor">Visitor</string>
    <string name="patients_detials">Patients Detials</string>
</resources>