<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="model"
            type="com.alibenalidoctor.models.SignUpModel" />

    </data>
    <ScrollView
        android:id="@+id/scrollView"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity_sign_up.SignUpActivity"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:background="@color/white"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            >

            <FrameLayout
                android:id="@+id/flSelectImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user"
                    android:clickable="false"
                    android:longClickable="false"

                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:background="@drawable/circle_primary"
                    android:src="@drawable/ic_edit"
                    app:tint="@color/white"
                    android:padding="10dp"
                    android:clickable="false"
                    android:longClickable="false"
                    />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flSelectImage"
                app:layout_constraintVertical_bias=".05"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/small_rounded_color1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_sign_user" />

                    <EditText
                        error="@{model.error_name}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/name"
                        android:paddingStart="22dp"
                        android:paddingEnd="22dp"
                        android:singleLine="true"
                        android:text="@={model.name}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray2"
                        android:textSize="15sp" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/small_rounded_color1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="3dp"
                        android:src="@drawable/pin" />

                    <TextView
                        android:id="@+id/edtPhone"
                        error="@{model.error_address}"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/address"
                        android:layout_weight="1"
                        android:paddingStart="22dp"
                        android:paddingEnd="22dp"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:text="@{model.address}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray2"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="5dp"
                        android:src="@drawable/map" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/clinic_type"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/small_rounded_color1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="3dp"
                        android:src="@drawable/pin" />



                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                     >

                        <Spinner
                            android:id="@+id/spCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/custom_spinner_icon"
                            android:gravity="center"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                             />
                    </FrameLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">
    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_primary_strock"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="3dp"
                app:tint="@color/colorAccent"
                android:src="@drawable/male" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>

    </FrameLayout>
    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_gray1_strock"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="3dp"
            android:src="@drawable/female" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/gray1"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:textSize="13sp" />
        </LinearLayout>

    </FrameLayout>
</LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
