<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="model"
            type="com.alibenalidoctor.models.SignUpModel" />

    </data>
    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity_sign_up.SignUpActivity"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:background="@color/white"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/gray0"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/specialization"
                android:textColor="@color/black"
                android:textSize="16sp"


                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/small_rounded_color1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:padding="3dp"
                    android:src="@drawable/special" />



                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    >

                    <Spinner
                        android:id="@+id/spCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_spinner_icon"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        />
                </FrameLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/license"
                android:textColor="@color/black"
                android:textSize="16sp"


                />
            <FrameLayout
                android:id="@+id/flSelectImage"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/small_rounded_color1"
                >
                <ImageView

                    android:id="@+id/imageLicense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    />
                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_gallery"
                    app:tint="@color/gray3"
                    />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/small_rounded_color1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">



                <EditText
                    error="@{model.error_name}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/degree"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:gravity="start"
                    android:text="@={model.name}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray2"
                    android:textSize="15sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>
